--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                 </button>
             </div>
 
+            <!-- hhehhe -->
             <div class="modal-footer">
                 <p class="modal-help">Need <a href="#">help</a></p>
             </div>
