--- a/index.html
+++ b/index.html
@@ -175,31 +175,31 @@
                 <i class="ti-close"></i>
             </div>
             <header class="modal-header">
-                <i class="ti-bag">Tickets</i>
+                <i class="modal-heading-icon ti-bag"></i>
+                Tickets
             </header>
             <div class="modal-body">
-                <label for="" class="modal-label">
+                <label for="ticket-quantity" class="modal-label">
                     <i class="ti-shopping-cart"></i>
                     Tickets, $15 per person
                 </label>
-                <input type="text" class="modal-input" placeholder="How many?">
+                <input id="ticket-quantity" type="text" class="modal-input" placeholder="How many?">
             </div>
 
             <div class="modal-body">
-                <label for="" class="modal-label">
+                <label for="ticket-email" class="modal-label">
                     <i class="ti-user"></i>
                     Send to
                 </label>
-                <input type="text" class="modal-input" placeholder="Enter Email...">
+                <input id="ticket-email" type="text" class="modal-input" placeholder="Enter ticket-Email...">
                 <button id="buy-tickets">
                     Pay
                     <i class="ti-check"></i>
                 </button>
             </div>
-
-            <!-- hhehhe -->
             <div class="modal-footer">
-                <p class="modal-help">Need <a href="#">help</a></p>
+                <button class="footer-close">Close <i class="close-buttom ti-close"></i> </button>
+                <p class="modal-help">Need <a href="#">help?</a></p>
             </div>
 
         </div>
